Renaming project files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FinalApp</string>
+    <string name="app_name">WheelDeal</string>
     <string name="text_home">Home</string>
     <string name="text_schedule">Schedule</string>
     <string name="text_profile">Profile</string>
