Added spinner for sort

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
         <item>Price: Low to High</item>
         <item>Num Passengers</item>
     </string-array>
+    <string name="sort_prompt">Sort by</string>
 </resources>
