Fixed default spinner option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
         <item>Volvo</item>
     </string-array>
     <string-array name="sort_array">
-        <item>Closest</item>
+        <item>Default</item>
         <item>Price: Low to High</item>
         <item>Num Passengers</item>
     </string-array>
